[gd_scene load_steps=4 format=3 uid="uid://wlniudjnedgt"]

[ext_resource type="Script" uid="uid://duvkfwhrv13pi" path="res://content/menus/lab_menu/lab_menu.gd" id="1_713mq"]
[ext_resource type="StyleBox" uid="uid://uribf4upf68k" path="res://common/styles/box_nine_patch.tres" id="2_yfyc7"]
[ext_resource type="PackedScene" uid="uid://owdet52m6jja" path="res://components/ui_components/menu_button/menu_button.tscn" id="4_yjsk7"]

[node name="LabMenu" type="CanvasLayer"]
script = ExtResource("1_713mq")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(3840, 2160)
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="Panel" type="PanelContainer" parent="CenterContainer/MarginContainer"]
self_modulate = Color(0.301961, 0.607843, 0.901961, 1)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_yfyc7")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SwitchButtons" type="HBoxContainer" parent="CenterContainer/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Control" type="Control" parent="CenterContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="PodName" type="Label" parent="CenterContainer/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Pod Name"
horizontal_alignment = 1

[node name="PodDescription" type="Label" parent="CenterContainer/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1920, 120)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Pod Description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="UpgradeGridContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="InventoryLabel" type="Label" parent="CenterContainer/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Inventory: 3 Ore"
horizontal_alignment = 1

[node name="LeaveButton" parent="CenterContainer/MarginContainer/Panel/VBoxContainer" instance=ExtResource("4_yjsk7")]
layout_mode = 2
text = "Leave the lab"

[connection signal="pressed" from="CenterContainer/MarginContainer/Panel/VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
